src-tauri/output_check_tray.txt
[1m[92m    Checking[0m antigravity_tools v0.1.0 (/Users/lbjlaq/Desktop/antigravity_tauri/src-tauri)
[1m[96m    Building[0m [=======================> ] 615/617: antigravity_tools           [K[0m[1m[38;5;9merror[E0599][0m[0m[1m: no method named `menu` found for struct `TrayIcon<R>` in the current scope[0m
[0m   [0m[0m[1m[38;5;12m--> [0m[0msrc/modules/tray.rs:203:39[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m203[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m             if let Some(menu) = tray.menu() {[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m                                       [0m[0m[1m[38;5;9m^^^^[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;14mhelp[0m[0m: there is a method `set_menu` with a similar name, but with different arguments[0m
[0m   [0m[0m[1m[38;5;12m--> [0m[0m/Users/lbjlaq/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tauri-2.9.5/src/tray/mod.rs:512:3[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m512[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m  pub fn set_menu<M: ContextMenu + 'static>(&self, menu: Option<M>) -> crate::Result<()> {[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m   [0m[0m[1m[38;5;14m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m

[1m[96m    Building[0m [=======================> ] 615/617: antigravity_tools           [K[0m[1m[33mwarning[0m[0m[1m: unused variable: `name`[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/modules/process.rs:18:13[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m18[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m        let name = process.name().to_string_los[0m[0m[1m[38;5;12m...[0m
[0m   [0m[0m[1m[38;5;12m|[0m[0m             [0m[0m[1m[33m^^^^[0m[0m [0m[0m[1m[33mhelp: if this is intentional, prefix it with an underscore: `_name`[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default[0m

[1m[96m    Building[0m [=======================> ] 615/617: antigravity_tools           [K[0m[1m[33mwarning[0m[0m[1m: unused variable: `name`[0m
[0m   [0m[0m[1m[38;5;12m--> [0m[0msrc/modules/process.rs:188:13[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m188[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m        let name = process.name().to_string_lo[0m[0m[1m[38;5;12m...[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m             [0m[0m[1m[33m^^^^[0m[0m [0m[0m[1m[33mhelp: if this is intentional, prefix it with an underscore: `_name`[0m

[1m[96m    Building[0m [=======================> ] 615/617: antigravity_tools           [K[0m[1m[33mwarning[0m[0m[1m: unused variable: `account_id`[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/modules/tray.rs:70:40[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m70[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m[1m[38;5;12m...[0m[0m let Ok(Some(account_id)) = modules::get_cur[0m[0m[1m[38;5;12m...[0m
[0m   [0m[0m[1m[38;5;12m|[0m[0m                 [0m[0m[1m[33m^^^^^^^^^^[0m[0m [0m[0m[1m[33mhelp: if this is intentional, prefix it with an underscore: `_account_id`[0m

[1m[96m    Building[0m [=======================> ] 615/617: antigravity_tools           [K[0m[1mFor more information about this error, try `rustc --explain E0599`.[0m
[1m[96m    Building[0m [=======================> ] 615/617: antigravity_tools           [K[1m[33mwarning[0m: `antigravity_tools` (lib) generated 3 warnings
[1m[91merror[0m: could not compile `antigravity_tools` (lib) due to 1 previous error; 3 warnings emitted
